# KeyNav

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.example.toml
installer/: keynav.iss
scripts/: build-release.ps1
src/: autostart.rs  config.rs  hotkey.rs  main.rs
src/hints/: assign.rs  matcher.rs  mod.rs
src/overlay/: mod.rs  window.rs
src/settings/: dialog.rs  hotkey_ctrl.rs  mod.rs
src/uia/: invoke.rs  mod.rs  scanner.rs
