[package]
name = "keynav"
version = "0.1.0"
edition = "2021"
description = "Vimium-style keyboard hint navigation for Windows"
license = "MIT"

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tray-icon = "0.19"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"
